Added licenses, README, and metadata.

--- a/serde_unit_struct/Cargo.toml
+++ b/serde_unit_struct/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "serde_unit_struct"
 version = "0.1.0"
+authors = ["Chris Riches"]
 edition = "2021"
+description = "(De)serialize a unit struct as its name"
+readme = "../README.md"
+repository = "https://github.com/cjriches/serde_unit_struct"
+license = "MIT OR Apache-2.0"
+categories = ["encoding"]
 
-[dependencies]
-serde_unit_struct_derive = { path = "../serde_unit_struct_derive" }
+[dependencies.serde_unit_struct_derive]
+path = "../serde_unit_struct_derive"
+version = "0.1.0"
 
 [dev-dependencies]
 serde = "1.0"
