--- a/serde_unit_struct/Cargo.toml
+++ b/serde_unit_struct/Cargo.toml
@@ -7,7 +7,7 @@ description = "(De)serialize a unit struct as its name"
 readme = "../README.md"
 repository = "https://github.com/cjriches/serde_unit_struct"
 license = "MIT OR Apache-2.0"
-categories = ["encoding"]
+categories = ["encoding", "no-std::no-alloc"]
 
 [dependencies.serde_unit_struct_derive]
 path = "../serde_unit_struct_derive"
