--- a/serde_unit_struct_derive/Cargo.toml
+++ b/serde_unit_struct_derive/Cargo.toml
@@ -7,7 +7,7 @@ description = "Proc-macro engine for serde_unit_struct"
 readme = "../README.md"
 repository = "https://github.com/cjriches/serde_unit_struct"
 license = "MIT OR Apache-2.0"
-categories = ["encoding"]
+categories = ["encoding", "no-std::no-alloc"]
 
 [lib]
 proc-macro = true
