--- a/serde_unit_struct/Cargo.toml
+++ b/serde_unit_struct/Cargo.toml
@@ -14,5 +14,11 @@ path = "../serde_unit_struct_derive"
 version = "0.1.2"
 
 [dev-dependencies]
-serde = "1.0"
-serde_json = "1.0"
+bson = "2"
+csv = "1"
+postcard = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+serde-pickle = "1"
+serde_yaml = "0.9"
+toml = "0.8"
